# georelate

./: .pre-commit-config.yaml  .pylintrc  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: example.py
georelate/: __init__.py  _distance.py  data.py
tests/: test__data.py  test__distance.py  test_demo.py
